--- a/Dashboard/Areas/TeamEntity/Views/Team/CreateOrEdit.cshtml
+++ b/Dashboard/Areas/TeamEntity/Views/Team/CreateOrEdit.cshtml
@@ -51,24 +51,40 @@
                                 <form class="form" asp-action="CreateOrEdit" enctype="multipart/form-data">
                                     <input type="hidden" asp-for="@IsProfile" />
                                     <div asp-validation-summary="All" class="text-danger">@ViewData["Error"]</div>
-                                    <div class="d-flex">
-                                        <a href="#" class="me-25">
-                                            <img src="@($"{Model.StorageUrl}{Model.ImageUrl}")" class="uploadedAvatar account-upload-img rounded me-50" height="100" width="100">
-                                        </a>
-                                        <!-- upload and reset button -->
-                                        <div class="d-flex align-items-end mt-75 ms-1">
-                                            <div>
-                                                <label for="account-upload" class="btn btn-sm btn-primary mb-75 me-75 waves-effect waves-float waves-light">@Localizer.Get("Upload Image")</label>
-                                                <input type="file" id="account-upload" class="account-upload" hidden="" name="ImageFile" accept="image/*">
-                                                <button type="button" class="account-reset btn btn-sm btn-outline-secondary mb-75 waves-effect">@Localizer.Get("Reset")</button>
-                                            </div>
-                                        </div>
-                                        <!--/ upload and reset button -->
-                                    </div>
-                                    <br />
 
                                     <div class="row mb-1">
-
+                                        <div class="col-md-6 col-12  mb-2">
+                                            <div class="d-flex">
+                                                <a href="#" class="me-25">
+                                                    <img src="@($"{Model.StorageUrl}{Model.ImageUrl}")" class="uploadedAvatar account-upload-img rounded me-50" height="100" width="100">
+                                                </a>
+                                                <!-- upload and reset button -->
+                                                <div class="d-flex align-items-end mt-75 ms-1">
+                                                    <div>
+                                                        <label for="account-upload" class="btn btn-sm btn-primary mb-75 me-75 waves-effect waves-float waves-light">@Localizer.Get("Upload Image")</label>
+                                                        <input type="file" id="account-upload" class="account-upload" hidden="" name="ImageFile" accept="image/*">
+                                                        <button type="button" class="account-reset btn btn-sm btn-outline-secondary mb-75 waves-effect">@Localizer.Get("Reset")</button>
+                                                    </div>
+                                                </div>
+                                                <!--/ upload and reset button -->
+                                            </div>
+                                        </div>
+                                        <div class="col-md-6 col-12 mb-2">
+                                            <div class="d-flex">
+                                                <a href="#" class="me-25">
+                                                    <img src="@($"{Model.ShirtStorageUrl}{Model.ShirtImageUrl}")" class="uploadedAvatar Shirt-upload-img rounded me-50" height="100" width="100">
+                                                </a>
+                                                <!-- upload and reset button -->
+                                                <div class="d-flex align-items-end mt-75 ms-1">
+                                                    <div>
+                                                        <label for="Shirt-upload" class="btn btn-sm btn-primary mb-75 me-75 waves-effect waves-float waves-light">@Localizer.Get("Upload Shirt Image")</label>
+                                                        <input type="file" id="Shirt-upload" class="Shirt-upload" hidden="" name="ShirtImageFile" accept="image/*">
+                                                        <button type="button" class="account-reset btn btn-sm btn-outline-secondary mb-75 waves-effect">@Localizer.Get("Reset")</button>
+                                                    </div>
+                                                </div>
+                                                <!--/ upload and reset button -->
+                                            </div>
+                                        </div>
                                         <div class="col-md-6 col-12">
                                             <div class="mb-1">
                                                 <label asp-for="Name" class="form-label"></label>
@@ -93,7 +109,7 @@
                                         </div>
                                     </div>
 
-                              
+
                                     <hr />
                                     <div class="row">
                                         <div class="col-12">
