--- a/Dashboard/Areas/PrivateLeagueEntity/Views/PrivateLeagueMember/Index.cshtml
+++ b/Dashboard/Areas/PrivateLeagueEntity/Views/PrivateLeagueMember/Index.cshtml
@@ -72,10 +72,11 @@
                                             <th>
                                                 @Html.DisplayNameFor(model => row.Id)
 
-                                             
+
                                             </th>
                                             <th>@Html.DisplayNameFor(model => row.Account)</th>
                                             <th>@Html.DisplayNameFor(model => row.PrivateLeague)</th>
+                                            <th>@Html.DisplayNameFor(model => row.Ranking)</th>
                                             <th>@Html.DisplayNameFor(model => row.IsAdmin)</th>
                                             <th>@Html.DisplayNameFor(model => row.CreatedAt)</th>
                                             <th>
@@ -147,6 +148,7 @@
                             }
                         },
                         { data: "privateLeague.name" },
+                        { data: "ranking" },
                         {
                             data: "isAdmin",
                             render: function (data, type, row) {
