--- a/Dashboard/Areas/SeasonEntity/Views/TeamGameWeak/CreateOrEdit.cshtml
+++ b/Dashboard/Areas/SeasonEntity/Views/TeamGameWeak/CreateOrEdit.cshtml
@@ -110,11 +110,19 @@
                                             </div>
                                         </div>
                                         
-                                        <div class="col-md-12 col-12">
+                                        <div class="col-md-6 col-12">
                                             <div class="mb-1">
                                                 <label asp-for="IsEnded" class="form-check-label" for="IsEnded"></label>
                                                 <input asp-for="IsEnded" class="form-check-input" />
                                                 <span asp-validation-for="IsEnded" class="text-danger"></span>
+                                            </div>
+                                        </div>
+                                        
+                                        <div class="col-md-6 col-12">
+                                            <div class="mb-1">
+                                                <label asp-for="IsDelayed" class="form-check-label" for="IsDelayed"></label>
+                                                <input asp-for="IsDelayed" class="form-check-input" />
+                                                <span asp-validation-for="IsDelayed" class="text-danger"></span>
                                             </div>
                                         </div>
                                     </div>
