--- a/Dashboard/Areas/PlayerScoreEntity/Views/ScoreType/Index.cshtml
+++ b/Dashboard/Areas/PlayerScoreEntity/Views/ScoreType/Index.cshtml
@@ -85,6 +85,9 @@
                                             </th>
                                             <th>@Html.DisplayNameFor(model => row.Name)</th>
                                             <th>@Html.DisplayNameFor(model => row._365_TypeId)</th>
+                                            <th>@Localizer.Get("BestPlayer")</th>
+                                            <th>@Html.DisplayNameFor(model => row.HavePoints)</th>
+                                            <th>@Html.DisplayNameFor(model => row.IsEvent)</th>
                                             <th>@Html.DisplayNameFor(model => row.CreatedAt)</th>
                                             <th>
                                                 @Html.DisplayNameFor(model => row.Id)
@@ -127,6 +130,27 @@
                         { data: "id" },
                         { data: "name" },
                         { data: "_365_TypeId" },
+                        { data: "bestPlayer.name" },
+                        { 
+                            data: "havePoints",
+                            render: function(data) {
+                              if (data) {
+                                  return '@Localizer.Get("Yes")'
+                              } else {
+                                  return '@Localizer.Get("No")'
+                              }
+                            }
+                        },
+                        { 
+                            data: "isEvent",
+                            render: function(data) {
+                              if (data) {
+                                  return '@Localizer.Get("Yes")'
+                              } else {
+                                  return '@Localizer.Get("No")'
+                              }
+                            }
+                        },
                         { data: "createdAt" },
                         { data: "id" },
                     ]
