--- a/Dashboard/Areas/StandingsEntity/Views/Standings/Index.cshtml
+++ b/Dashboard/Areas/StandingsEntity/Views/Standings/Index.cshtml
@@ -179,7 +179,7 @@
                             }
                         },
                          { data: "points" },
-                         { data: "season.name" },
+                         { data: "season.name", orderable: false },
                         { data: "gamesWon" },
                         { data: "gamesLost" },
                         { data: "gamesEven" },
